# newton

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: bitboard.rs  bitmove.rs  board.rs  defs.rs  evaluate.rs  main.rs  misc.rs  movegen.rs  movelist.rs  perft.rs  search.rs  uci.rs
src/board/: fen.rs  game_state.rs  history.rs  make_move.rs  utils.rs  zobrist.rs
src/movegen/: bit_move.rs  castle.rs  init.rs  king.rs  knights.rs  magics.rs  mod.rs  pawns.rs  slide.rs  uci.rs
