[package]
name = "rust-chess"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
multiarray = "0.1.3"
ndarray = "0.17.1"
once_cell = "1.21.3"
rand = "0.9.2"
if_chain = "1.0.3"
rand_chacha = "0.9.0"